--- a/locations-spring-solution/pom.xml
+++ b/locations-spring-solution/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>microservices.training</groupId>
-	<artifactId>locations</artifactId>
+	<artifactId>locations-spring-solution</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>locations</name>
+	<name>locations-spring-solution</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>16</java.version>
@@ -27,17 +27,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<version> 2.5.1</version>
+			<type>maven-plugin</type>
+		</dependency>
+
 	</dependencies>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+
 
 </project>
